--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,18 @@
-*{
-    box-sizing: border-box;
-    padding: 0%;
-    margin: 0;
+.important {
+    color: orange;
 }
-h1 {
-    font-size: 36px;
+header {
+    display: block;
+    background-color: #001c42;
+    text-align: center;
 }
-
-h2 {
-    font-size: 28px;
-}
-
-p {
-    font-size: 24px;
-    margin: 0;
-}
-
-li {
-    font-size: 20px;
-}
-
-i {
+.header-link {
+    text-decoration: none;
     color: white;
-    font-size: 32px;
+    display: block;
+    padding: 24px 8px;
+    font-size: 48px;
 }
-
-div {
-    line-height: 32px;
+text-center {
+    text-align: center;
 }
