--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 .important {
     color: orange;
 }
@@ -11,8 +15,23 @@ header {
     color: white;
     display: block;
     padding: 24px 8px;
-    font-size: 48px;
+    font-size: 26px;
 }
 text-center {
     text-align: center;
 }
+h1 {
+    font-size: 30px;
+}
+h2 {
+    font-size: 20px;
+}
+img {
+        display: block;        
+        width: 100%;
+        height: 300px;
+    }
+}
+.border {
+    border: 2px solid red;
+  }
