--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,15 @@ img {
     font-size: 26px;
 }
 #img1 {
-    width: 300px;
-    height: 250px;
+    width: 450px;
+    height: 300px;
     float: right;
+    margin: 30pt;
+}
+h3 {
+    font-size: 16px;
+}
+.border{
+    border: 2px solid #001c42;
+    padding: 6px;
+  }
