add background color

--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,10 @@ img {
     font-size: 26px;
 }
 #img1 {
-    width: 450px;
-    height: 300px;
+    width: 350px;
+    height: 0px;
     float: right;
-    margin: 30pt;
+    
 }
 h3 {
     font-size: 16px;
@@ -51,3 +51,23 @@ h3 {
     border: 2px solid #001c42;
     padding: 6px;
   }
+.contact {
+    border: 2px solid #001c42;
+    padding: 6px;
+}
+.portfolio-image {
+    display: block;
+    width:100%;
+    height: 500px;
+}
+.about {
+    border: 2px solid #001c42;
+    padding: 6px;
+}
+.background {
+    background-color: turquoise;
+    margin: 0%;
+}
+h1 {
+    text-align: center;
+}
