--- a/css/style.css
+++ b/css/style.css
@@ -21,27 +21,6 @@ h1 {
 }
 h2 {
     font-size: 20px;
-}
-img {
-        display: block;        
-        width: 100%;
-        height: 300px;
-    }
-}
-.border {
-    border: 2px solid red;
-  }
-  footer {
-    display: block;
-    background-color: #001c42;
-    text-align: center;
-    color: white;
-    font-size: 26px;
-}
-#img1 {
-    width: 350px;
-    height: 0px;
-    float: right;
     
 }
 h3 {
@@ -57,8 +36,11 @@ h3 {
 }
 .portfolio-image {
     display: block;
-    width:100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
     height: 500px;
+    width: 800px;
 }
 .about {
     border: 2px solid #001c42;
@@ -74,6 +56,8 @@ h1 {
 #img2 {
     float: right;
     width: 200px;
-    height: 130px;
+    height: 145px;
 
 }
+
+  
