--- a/css/style.css
+++ b/css/style.css
@@ -1,63 +1,60 @@
 .important {
-    color: orange;
+  color: orange;
 }
 header {
-    display: block;
-    background-color: #001c42;
-    text-align: center;
+  display: block;
+  background-color: #001c42;
+  text-align: center;
 }
 .header-link {
-    text-decoration: none;
-    color: white;
-    display: block;
-    padding: 24px 8px;
-    font-size: 26px;
+  text-decoration: none;
+  color: white;
+  display: block;
+  padding: 24px 8px;
+  font-size: 26px;
 }
 text-center {
-    text-align: center;
+  text-align: center;
 }
 h1 {
-    font-size: 30px;
+  font-size: 28px;
+  color: purple;
 }
 h2 {
-    font-size: 20px;
-    
+  font-size: 20px;
 }
 h3 {
-    font-size: 16px;
+  font-size: 16px;
 }
-.border{
-    border: 2px solid #001c42;
-    padding: 6px;
-  }
+.border {
+  border: 2px solid #001c42;
+  padding: 6px;
+}
 .contact {
-    border: 2px solid #001c42;
-    padding: 6px;
+  border: 2px solid #001c42;
+  padding: 6px;
 }
 .portfolio-image {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    height: 500px;
-    width: 800px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 500px;
+  width: 800px;
 }
 .about {
-    border: 2px solid #001c42;
-    padding: 6px;
+  border: 1px solid #001c42;
+  padding: 6px;
 }
 .background {
-    background-color: #bee0ec;
-    margin: 0%;
+  background-color: #bee0ec;
+  margin: 0%;
 }
 h1 {
-    text-align: center;
+  text-align: center;
 }
 #img2 {
-    float: right;
-    width: 200px;
-    height: 145px;
-
+  float: right;
+  width: 200px;
+  height: 145px;
 }
-
-  
